@@ -7,9 +7,9 @@ import org.bukkit.Material;
 import org.bukkit.OfflinePlayer;
 import org.bukkit.entity.Player;
 import org.bukkit.plugin.java.JavaPlugin;
-import org.v_utls.guiparent.BaseGui;
-import org.v_utls.guiparent.GuiCreator;
-import org.v_utls.utilities.RanksLister;
+import org.vicky.guiparent.BaseGui;
+import org.vicky.guiparent.GuiCreator;
+import org.vicky.utilities.RanksLister;
 import org.vicky.vicky.listeners.FriendsMainListener;
 import org.vicky.vicky.messages.MessageManager;
 import org.vicky.vicky.playerdata.FriendManager;
@@ -51,7 +51,7 @@ public class FriendMainGui extends BaseGui {
     GuiCreator.ItemConfig IAPARTYBUTTON_2 = null;
     GuiCreator.ItemConfig IAPLAYERHEAD = null;
 
-//.........................................//
+    //.........................................//
     GuiCreator.ItemConfig PLAYER_1 = null;
     GuiCreator.ItemConfig PLAYER_2 = null;
     GuiCreator.ItemConfig PLAYER_3 = null;
@@ -73,7 +73,7 @@ public class FriendMainGui extends BaseGui {
     GuiCreator.ItemConfig PLAYER_19 = null;
     GuiCreator.ItemConfig PLAYER_20 = null;
     GuiCreator.ItemConfig PLAYER_21 = null;
- //.........................................//
+    //.........................................//
 
 
     @Override
@@ -81,13 +81,10 @@ public class FriendMainGui extends BaseGui {
 
         PlayerSettingsGenerator settingsGenerator = new PlayerSettingsGenerator(plugin, player);
         FriendsListSorter sorter = new FriendsListSorter(plugin);
-        RanksLister lister = new RanksLister();
-        MessageManager messageManager = new MessageManager(plugin);
         HashMap<String, GuiCreator.ItemConfig> Items = new HashMap<>();
 
 
         boolean iaEnabled = Bukkit.getServer().getPluginManager().getPlugin("ItemsAdder") != null;
-        boolean hasFriendRequest = sorter.hasFriendRequest(player);
 
         if (iaEnabled) {
             String SortingName;
@@ -116,52 +113,70 @@ public class FriendMainGui extends BaseGui {
                 SortingName = "";
             }
 
-            Bukkit.getScheduler().runTask(plugin, () -> {
-                sorter.sortList(player, sorttype)
-                        .thenAccept(friend -> {
-                            if (friend == null) {
-                                plugin.getLogger().warning("Received null friends list from sorter");
-                                return;
-                            }
+            String finalTheme_id = theme_id;
+            Bukkit.getScheduler().runTask(plugin, () -> sorter.sortList(player, sorttype)
+                    .thenAccept(friend -> {
+                        if (friend == null) {
+                            plugin.getLogger().warning("Received null friends list from sorter");
+                            return;
+                        }
 
-                            if (friend.isEmpty()) {
-                                plugin.getLogger().info("Friends list is empty");
-                                return;
-                            }
+                        if (friend.isEmpty()) {
+                            plugin.getLogger().info("Friends list is empty");
+                            return;
+                        }
 
-                            List<GuiCreator.ItemConfig> friendConfigs = List.of(
-                                    PLAYER_1, PLAYER_2, PLAYER_3, PLAYER_4, PLAYER_5, PLAYER_6, PLAYER_7,
-                                    PLAYER_8, PLAYER_9, PLAYER_10, PLAYER_11, PLAYER_12, PLAYER_13,
-                                    PLAYER_14, PLAYER_15, PLAYER_16, PLAYER_17, PLAYER_18, PLAYER_19, PLAYER_20, PLAYER_21
-                            );
+                        List<GuiCreator.ItemConfig> friendConfigs = new ArrayList<>(Arrays.asList(
+                                PLAYER_1, PLAYER_2, PLAYER_3, PLAYER_4, PLAYER_5, PLAYER_6, PLAYER_7,
+                                PLAYER_8, PLAYER_9, PLAYER_10, PLAYER_11, PLAYER_12, PLAYER_13,
+                                PLAYER_14, PLAYER_15, PLAYER_16, PLAYER_17, PLAYER_18, PLAYER_19, PLAYER_20, PLAYER_21
+                        ));
 
-                            // Create a sublist for the first 21 friends or fewer if the list is smaller
-                            List<UUID> handleFriends = friend.size() > 21 ? friend.subList(0, 21) : new ArrayList<>(friend);
+                        // Create a sublist for the first 21 friends or fewer if the list is smaller
+                        List<UUID> handleFriends = friend.size() > 21 ? friend.subList(0, 21) : new ArrayList<>(friend);
 
-                            // Create friend item configs asynchronously
-                            createFriendItemConfigs(handleFriends, friendConfigs).thenAccept(friendItems -> {
-                                if (friendItems != null && !friendItems.isEmpty()) {
-                                    for (int i = 0; i < friendItems.size(); i++) {
+                        // Create friend item configs asynchronously
+                        createFriendItemConfigs(handleFriends, friendConfigs).thenAccept(friendItems -> {
+                            if (!friendItems.isEmpty()) {
+                                for (int i = 0; i < friendItems.size(); i++) {
+                                    if (friendItems.get(i) != null) {
+                                        plugin.getLogger().info("Added friend: " + friendItems.get(i).getName() + " with lore: " + friendItems.get(i).getLore());
                                         Items.put("PLAYER_" + (i + 1), friendItems.get(i));
                                     }
                                 }
+                            }
 
-                                // You may want to trigger GUI updates here as well
-                            }).exceptionally(ex -> {
-                                plugin.getLogger().severe("Error creating friend item configs: " + ex.getMessage());
-                                ex.printStackTrace();
-                                return null;
-                            });
+                            // You may want to trigger GUI updates here as well
                         }).exceptionally(ex -> {
-                            plugin.getLogger().severe("Error sorting friends: " + ex.getMessage());
+                            plugin.getLogger().severe("Error creating friend item configs: " + ex.getMessage());
                             ex.printStackTrace();
                             return null;
                         });
-            });
+                    })
+                    .thenRun(() ->
+                            Bukkit.getScheduler().runTask(plugin, () -> proceed(player, SortingName, finalTheme_id, Items))
+                    )
+                    .exceptionally(ex -> {
+                        plugin.getLogger().severe("Error sorting friends: " + ex.getMessage());
+                        ex.printStackTrace();
+                        return null;
+                    }));
+
+        }
+
+    }
+
+    public void proceed(Player player, String SortingName, String theme_id, HashMap<String, GuiCreator.ItemConfig> Items) {
+        PlayerSettingsGenerator settingsGenerator = new PlayerSettingsGenerator(plugin, player);
+        FriendsListSorter sorter = new FriendsListSorter(plugin);
+        RanksLister lister = new RanksLister();
+        MessageManager messageManager = new MessageManager(plugin);
 
 
+        boolean iaEnabled = Bukkit.getServer().getPluginManager().getPlugin("ItemsAdder") != null;
+        boolean hasFriendRequest = sorter.hasFriendRequest(player);
 
-
+        if (iaEnabled) {
             List<String> lore = new ArrayList<>();
             lore.add(ChatColor.GRAY + "ᴄᴜʀʀᴇɴᴛ sᴏʀᴛɪɴɢ ᴏʀᴅᴇʀ: ");
             lore.add("    " + ChatColor.GOLD + SortingName);
@@ -215,15 +230,13 @@ public class FriendMainGui extends BaseGui {
                 if (prefix != null && !prefix.isEmpty()) {
                     title.set(prefix + ChatColor.RESET + " | " + title.get());
                 }
-            }).thenRun(() -> {
-                lister.getUserSuffix(playerId).thenAccept(suffix -> {
-                    if (suffix != null && !suffix.isEmpty()) {
-                        title.set(title.get() + ChatColor.RESET + " | " + suffix);
-                    }
-                    // Now you can use the complete title
-                    plugin.getLogger().info("Final title: " + title.get());
-                });
-            });
+            }).thenRun(() -> lister.getUserSuffix(playerId).thenAccept(suffix -> {
+                if (suffix != null && !suffix.isEmpty()) {
+                    title.set(title.get() + ChatColor.RESET + " | " + suffix);
+                }
+                // Now you can use the complete title
+                plugin.getLogger().info("Final title: " + title.get());
+            }));
 
             headLore.add("");
             headLore.add(ChatColor.RESET + "ʏᴏᴜʀ sᴛᴀᴛᴜs");
@@ -314,64 +327,94 @@ public class FriendMainGui extends BaseGui {
                 Items.put("IAPARTYBUTTON_2", IAPARTYBUTTON_2);
             }
 
+            for (GuiCreator.ItemConfig currentItem : Items.values().toArray(new GuiCreator.ItemConfig[0])) {
+                plugin.getLogger().info("item addded: " + currentItem.getName());
+                plugin.getLogger().info("has lore: " + currentItem.getLore());
+            }
+
             guiManager.openGUI(player, 6, 9, "", true, "vicky_themes:friends_gui_main_panel_" + theme_id, -8,
                     Items.values().toArray(new GuiCreator.ItemConfig[0])
             );
-
         }
-
     }
 
     public CompletableFuture<List<GuiCreator.ItemConfig>> createFriendItemConfigs(List<UUID> friends, List<GuiCreator.ItemConfig> itemConfigs) {
-        List<GuiCreator.ItemConfig> friendItemConfigs = new ArrayList<>();
         RanksLister lister = new RanksLister();
         List<CompletableFuture<Void>> futures = new ArrayList<>();
 
         for (int i = 0; i < Math.min(friends.size(), 21); i++) {
             UUID friend = friends.get(i);
-            OfflinePlayer player = Bukkit.getPlayer(friend);
-            PlayerSettingsGenerator settingsGenerator = new PlayerSettingsGenerator(plugin, player);
             OfflinePlayer currentFriend = Bukkit.getOfflinePlayer(friend);
             String friendName = currentFriend.getName();
+
+            if (friendName == null) {
+                plugin.getLogger().severe("Friend name is null for UUID: " + friend);
+                continue;  // Skip this iteration if name is null
+            }
+
             AtomicReference<String> title = new AtomicReference<>(friendName); // Using friend's name as default
 
+            List<String> lore = new ArrayList<>();
+            lore.add("");
+            lore.add(ChatColor.RESET + "ʏᴏᴜʀ sᴛᴀᴛᴜs");
+            lore.add(ChatColor.YELLOW + "→ " + ChatColor.AQUA + "Loading status..."); // Placeholder for async status load
+
             int finalI = i;
+
+            // Fetch prefix asynchronously
             CompletableFuture<Void> future = lister.getUserPrefix(friend).thenAccept(prefix -> {
                 if (prefix != null && !prefix.isEmpty()) {
                     title.set(prefix + ChatColor.RESET + " | " + title.get());
                 }
-            }).thenRun(() -> {
-                lister.getUserSuffix(friend).thenAccept(suffix -> {
+                plugin.getLogger().info("Prefix processed for " + friendName + ": " + prefix);
+            }).thenCompose(v -> {
+                // After prefix, fetch suffix
+                return lister.getUserSuffix(friend).thenAccept(suffix -> {
                     if (suffix != null && !suffix.isEmpty()) {
                         title.set(title.get() + ChatColor.RESET + " | " + suffix);
                     }
-                    // Now you can use the complete title
-                    plugin.getLogger().info("Final title: " + title.get());
-
-                    List<String> lore = new ArrayList<>();
-                    lore.add("");
-                    lore.add(ChatColor.RESET + "ʏᴏᴜʀ sᴛᴀᴛᴜs");
-                    lore.add(ChatColor.YELLOW + "→ " + ChatColor.AQUA + settingsGenerator.getConfigValue(player, "Settings.Status"));
-
-                    // Create ItemConfig and add to the list after fetching title
+                    plugin.getLogger().info("Suffix processed for " + friendName + ": " + suffix);
+                });
+            }).thenRun(() -> {
+                Bukkit.getScheduler().runTask(plugin, () -> {
+                    plugin.getLogger().info("Setting item at index " + finalI + " with title: " + title.get());
                     itemConfigs.set(finalI, new GuiCreator.ItemConfig(
-                            null, // Or any material you want
+                            null,
                             title.get(),
-                            Integer.toString(finalI + 19), // Slot calculation
+                            Integer.toString(finalI + 19),
                             true,
                             null,
                             "player_head_gui_size_1",
                             lore
                     ));
-                    friendItemConfigs.add(itemConfigs.get(finalI));
+                    plugin.getLogger().info("Item set for index " + finalI + ": " + title.get());
                 });
+            }).exceptionally(ex -> {
+                // Log any errors
+                plugin.getLogger().severe("Error processing friend " + friendName + ": " + ex.getMessage());
+                ex.printStackTrace();
+                return null;
             });
+
             futures.add(future);
         }
 
-        // Wait for all futures to complete and then return the filled list
+        // Wait for all futures to complete
         return CompletableFuture.allOf(futures.toArray(new CompletableFuture[0]))
-                .thenApply(v -> friendItemConfigs);
+                .thenApply(v -> {
+                    // Log final configuration for debugging
+                    if (itemConfigs.isEmpty()) {
+                        plugin.getLogger().info("Friends items is empty");
+                    } else {
+                        for (GuiCreator.ItemConfig friend : itemConfigs) {
+                            if (friend != null) {
+                                plugin.getLogger().info("Friend: " + friend.getName());
+                            } else {
+                                plugin.getLogger().info("null value in itemConfigs");
+                            }
+                        }
+                    }
+                    return itemConfigs;
+                });
     }
-
 }
